styles/index.css
@layer base {
  html,
  body,
  #__next {
    height: 100%;
    width: 100%;
  }

  body {
    @apply font-sans;
  }

  a {
    @apply text-blue-500;
  }
  a:hover {
    @apply text-blue-300;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  .heading {
    @apply font-heading font-semibold;
  }

  .heading {
    @apply leading-relaxed mb-2;
  }
}

@layer components {
  /*** MAP ***/
  .map-container {
  }
  .map-container > div {
    @apply h-full pb-16;
  }

  /*** POSTS ***/
  .posts-container {
  }

  .posts-item {
  }
  @variants hover {
    .posts-item-active {
      @apply bg-blue-500;
    }
  }

  /*** FORM ***/
  .field {
    @apply block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none;
  }

  .field-label {
    @apply uppercase font-bold text-lg text-gray-900 mb-2;
  }

  /*** NAV ***/
  .bottom-nav {
    @apply fixed bottom-0 left-0 right-0 w-full h-16 z-40 p-2 pb-4 flex flex-row justify-around;
    @apply bg-gray-100;
    box-shadow: 0 0 0.5rem 0.1rem theme("colors.gray.500");
  }

  .nav-actions {
    @apply flex;
  }
  .nav-actions__hidden {
    @apply hidden;
  }
  .nav-actions > * {
    @apply mb-2;
  }
  .nav-actions > *:last-child {
    @apply mb-0;
  }

  .nav-action {
    @apply flex flex-1 flex-col justify-center items-center;
  }

  .nav-action__active {
    @apply text-blue-500;
  }
  .nav-action-button {
  }

  @media all and (display-mode: standalone) {
    .install-bar {
      display: none;
    }
  }

  .text-input {
    @apply block w-full p-1 mt-1 focus:ring focus:outline-none;
  }

  .auth-form {
    @apply p-2;
  }
}

